--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,60 @@
+asn1crypto==1.4.0
+azure-common==1.1.25
+azure-core==1.8.0
+azure-storage-blob==12.4.0
+backcall==0.2.0
+boto3==1.14.46
+botocore==1.17.46
+Brotli==1.0.9
+certifi==2020.6.20
+cffi==1.14.2
+chardet==3.0.4
 click==7.1.2
+colorama==0.4.3
+cryptography==2.9.2
+dash==1.16.0
+dash-core-components==1.12.0
+dash-html-components==1.1.1
+dash-renderer==1.8.0
+dash-table==4.10.1
+decorator==4.4.2
+docutils==0.15.2
 Flask==1.1.2
+Flask-Compress==1.5.0
 Flask-Dropzone==1.5.4
+future==0.18.2
+idna==2.9
+ipython==7.17.0
+ipython-genutils==0.2.0
+isodate==0.6.0
 itsdangerous==1.1.0
+jedi==0.17.2
 Jinja2==2.11.2
+jmespath==0.10.0
 MarkupSafe==1.1.1
+msrest==0.6.18
 numpy==1.19.1
+oauthlib==3.1.0
+oscrypto==1.2.1
 pandas==1.1.0
+parso==0.7.1
+pickleshare==0.7.5
+plotly==4.10.0
+prompt-toolkit==3.0.6
+pycparser==2.20
+pycryptodomex==3.9.8
+Pygments==2.6.1
+PyJWT==1.7.1
+pyOpenSSL==19.1.0
 python-dateutil==2.8.1
 pytz==2020.1
+requests==2.23.0
+requests-oauthlib==1.3.0
+retrying==1.3.3
+s3transfer==0.3.3
 six==1.15.0
+snowflake-connector-python==2.2.10
+traitlets==4.3.3
+urllib3==1.25.10
+wcwidth==0.2.5
 Werkzeug==1.0.1
